--- a/Conditional/Switch_Demo_4.html
+++ b/Conditional/Switch_Demo_4.html
@@ -5,7 +5,7 @@
     
     <BODY>
     <script>
-        var x = 'cat';
+        var x = 'rat';
         switch(x)
         {	
         case 'apple':
