--- a/Conditional/Switch_Test_1.html
+++ b/Conditional/Switch_Test_1.html
@@ -6,8 +6,7 @@
     <BODY>
     <script>
         var x = 2;	
-        switch(x)
-        {
+        switch(x){
         case-1:
             document.write("Sunday");
             break;
