--- a/Datatypes/symbol_demo.html
+++ b/Datatypes/symbol_demo.html
@@ -1,11 +1,11 @@
 <script>
     // object should have either 'string' or 'symbol' type keys
     let user = {};
-    user["name"] = "sanjay";
+    user["name"] = "Manoranjan";
     user["role"] = "trainer";
   
     let address = Symbol("address");
-    user[address] = "bangalore";
+    user[address] = "bbsr";
   
     let salary = Symbol("salary");
     user[salary] = 5000;
