--- a/Function/User Defined/Arrow Function/Arrow Function.html
+++ b/Function/User Defined/Arrow Function/Arrow Function.html
@@ -1,11 +1,16 @@
 <script>
-    /* Regular: 'this' is dynamic, it changes (from where it is called)
-    Arrow : 'this' is not dynamic, where it is declared */
-
+    // Regular: 'this' is dynamic, it changes (from where it is called)
+    
     function f1() {
         console.log('I am f1....');
         console.log(this); 
         // this = where it is called
     }
     f1();
+    
+    // Arrow : 'this' is not dynamic, where it is declared
+    let f2 = () => {
+        console.log(this); // window
+    }
+    f2();
 </script>
