--- a/Function/User Defined/Arrow Function/Arrow Function6.html
+++ b/Function/User Defined/Arrow Function/Arrow Function6.html
@@ -3,12 +3,12 @@
 <body>
   <script>
     class Employee {
-      name = "sanjay";
+      name = "Sachin";
       greet1 = function () {
-        console.log("hello- " + this); // this = Employee / Window
+        console.log("hello.! " + this); // this = Employee / Window
       };
       greet2 = () => {
-        console.log("hi- " + this.name); // this = Employee
+        console.log("hi, " + this.name); // this = Employee
       };
     }
     let emp = new Employee();
