--- a/Function/User Defined/Arrow Function/Arrow Function6_1.html
+++ b/Function/User Defined/Arrow Function/Arrow Function6_1.html
@@ -3,7 +3,7 @@
 <body>
   <script>
     class Employee {
-      name = "Manoranjan";
+      name = "Sachin";
       sal = 5000;
       displayInfo1 = function () {
         console.log("displayInfo-1 " + this); // this = Employee / Window
