--- a/Function/User Defined/Arrow Function/Arrow Function6_2.html
+++ b/Function/User Defined/Arrow Function/Arrow Function6_2.html
@@ -2,12 +2,12 @@
   <body>
     <script>
       class Employee {
-        name = "Manoranjan";
+        name = "Sachin";
         greet1 = function () {
-          console.log("hello- " + this.name); // this = Employee / Window
+          console.log("hello.! " + this.name); // this = Employee / Window
         };
         greet2 = () => {
-          console.log("hi- " + this.name); // this = Employee
+          console.log("hi, " + this.name); // this = Employee
         };
       }
       let emp = new Employee();
