--- a/variable/Execution_Context_0.html
+++ b/variable/Execution_Context_0.html
@@ -1,7 +1,7 @@
 <script>
     // GEC=anonymous , add , sub = 3
     var name = "sachin";
-    console.log(name);
+    console.log(name); // sachin
 
     function add(a, b) {
       return a + b;
@@ -10,8 +10,9 @@
       return a - b;
     }
     var res1 = add(2, 3);
-    console.log(res1);
+    console.log(res1); // 5
 
     var res2 = sub(5, 3);
-    console.log(res2);
+    console.log(res2);  // 2
+    
   </script>
