--- a/variable/Execution_Context_1.html
+++ b/variable/Execution_Context_1.html
@@ -1,14 +1,18 @@
 <script>
-    var n = 2; //global
-
+    var n = 5; //global
+    
     function square(num) {
-        let res;
-        res = num * num;
+        let res = num * num;
         return res;
     }
     var res1 = square(n);  // funtion call
-    console.log(res1);
-
     var res2 = square(4);  //funcion call
+    console.log(res1);
     console.log(res2);
+
+
+   
+
+
+    
 </script>
