--- a/variable/const_demo4.html
+++ b/variable/const_demo4.html
@@ -1,9 +1,8 @@
 <script>
-     arr1 = ["Rajesh","Rashmi", "Manoranjan"];
-    arr1.push("Priyanka");
-    // arr1.push(40);
+    const arr1 = [10, 20];
+    arr1.push(40);
     // arr1.push(50);
     console.log(arr1);
 
-    arr1 = [5, 15];
+    // arr1 = [5, 15];
 </script>
