--- a/1Introduction/Strict Demo_4.html
+++ b/1Introduction/Strict Demo_4.html
@@ -9,7 +9,7 @@
   delete arr[1];
   console.log(arr[1]);
 
-  let name = 'sanjay';
+  let name = 'Manoranjan';
   let age = 30;
   delete name;
   delete age;
