--- a/variable/Execution_Context_4.html
+++ b/variable/Execution_Context_4.html
@@ -1,11 +1,13 @@
 <script>
     // Contexts - 
-    console.log('GEC Started')
-    function displayA() { console.log('aaaaaaaa') }
+    console.log('GEC Started') //
+    function displayA() { 
+        console.log('aaaaaaaa') 
+    }
     function displayB() { console.log('bbbbbbbb') }
     function displayC() { console.log('cccccccc') }
     function displayD() { console.log('ddddddd') }
-    setTimeout(displayC, 1000);
+    setTimeout(displayC, 4000);
     displayA();
     Promise.resolve().then(displayD);
     displayB();
