--- a/variable/const_demo5.html
+++ b/variable/const_demo5.html
@@ -5,10 +5,11 @@
 
 
     const obj = {x:10, y:20};
+    console.log(obj);
     obj.x = 15;
-    console.log(obj)
+    console.log(obj);
     obj.z = 30;
-    console.log(obj)
+    console.log(obj);
 
-    obj = {x:5, y:6}; //Assignment to constant variable.
+    // obj = {x:5, y:6}; //Assignment to constant variable.
 </script>
