--- a/ES_6_7_8_9_10/ES_6/arrow_test_0.html
+++ b/ES_6_7_8_9_10/ES_6/arrow_test_0.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<script>
-			name = 'ajay';
+			name = 'Manoranjan';
 			let obj1 = {
 				 name : "Sachin",
 				 f1 : function(){
