--- a/Function/Closure/Closure Function0.html
+++ b/Function/Closure/Closure Function0.html
@@ -14,4 +14,8 @@
     }
     console.dir(f1);
     f1();
+
+    let f3 = { name: 'John', age: 30, city: 'New York' };
+    console.dir(f3);
+
 </script>
