--- a/Function/User Defined/IIFE/IIFE1.html
+++ b/Function/User Defined/IIFE/IIFE1.html
@@ -3,10 +3,10 @@
         if (true) {
             (function () {
                 var name = "sachin";
-                console.log("block ", name); // sachin
+                console.log("block ", name); // block sachin
             })();
         }
-        console.log("function ", name); // sachin
+        console.log("function ", name); // function 
     }
     f1();
 </script>
