--- a/Loop/DOWHILE/Dowhile1.html
+++ b/Loop/DOWHILE/Dowhile1.html
@@ -7,7 +7,7 @@
 
     let a = 1;
     do {
-        document.write("Welcome to Javascript" + "<br>");
+        document.write("Welcome to Javascript- "+ a + "<br>");
         a++;
     } while (a <= 10);
 </script>
