--- a/Function/User Defined/Fuction Currying/Currying Function_2.html
+++ b/Function/User Defined/Fuction Currying/Currying Function_2.html
@@ -13,9 +13,9 @@
           };
         }
         res1 = add(1)(2)(3)();
-        console.log(res1);
+        console.log(res1);  //6
         res2 = add(1)(1)(1)(1)();
-        console.log(res2);
+        console.log(res2); // 4
       </script>
     </body>
   </html>
