--- a/Function/User Defined/Recursive Function/Recursive Function_1.html
+++ b/Function/User Defined/Recursive Function/Recursive Function_1.html
@@ -7,10 +7,10 @@
 				else
 					return base * power (base , exponent - 1); 
 			}
-			let base = prompt('enter base value')
-			let exponent = prompt('enter exponent value')
+			let base = prompt('enter base value') // 2 2*2*2
+			let exponent = prompt('enter exponent value')// 3
 			let result = power(base,exponent);
-			alert('result is: '+result)
+			alert('result is: ' + result)
 		</script>
 	</body>
 </html>
