--- a/Loop/DOWHILE/Dowhile2.html
+++ b/Loop/DOWHILE/Dowhile2.html
@@ -1,13 +1,13 @@
 <script>
     var x = 6;
     while (x <= 5) {
-        document.write("While Loop Body <br>");
+        document.write("While Loop Body <br>"); //
         x++;
     }
 
     var a = 6;
     do {
-        document.write("Do-while loop Body <br>");
+        document.write("Do-while loop Body <br>"); //
         a++;
     }
     while (a <= 5);
